update wasm binary; docs

--- a/cmd/example/index.html
+++ b/cmd/example/index.html
@@ -19,21 +19,21 @@
 	      <form>
 		  <input type="text" id="airport_code" />
 		  <button type="submit" disabled="disabled" id="airport_code_button">Lookup</button>
-		  <label for="airport_code">Search for an IATA or ICAO airport identifier</label>
+		  <label for="airport_code">Search for an IATA or ICAO airport code</label>
 	      </form>
 
 	      <h4>Lookup an airline</h4>
 	      <form>
 		  <input type="text" id="airline_code" />
 		  <button type="submit" disabled="disabled" id="airline_code_button">Lookup</button>
-		  <label for="airport_code">Search for an IATA or ICAO airline identifier</label>		  
+		  <label for="airport_code">Search for an IATA or ICAO airline code</label>		  
 	      </form>
 
 	      <h4>Lookup an aircraft</h4>
 	      <form>
 		  <input type="text" id="aircraft_code" />
 		  <button type="submit" disabled="disabled" id="aircraft_code_button">Lookup</button>
-		  <label for="airport_code">Search for an IATA or ICAO aircraft identifier</label>		  		  
+		  <label for="airport_code">Search for an ICAO aircraft designator</label>		  		  
 	      </form>
 	      
 	  </div>
